Clean up inspection warnings